# for_libc

./: CMakeLists.txt  Makefile  README.md
include/: _config.h  ctype.h  endian.h  errno.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h
include/pfmt/: pfmt.h
include/x86_64/: _endian.h  _limits.h
include/x86_64/_types/: _int16_t.h  _int32_t.h  _int64_t.h  _int8_t.h  _intptr_t.h  _max_align_t.h  _ptrdiff_t.h  _size_t.h  _ssize_t.h  _uint16_t.h  _uint32_t.h  _uint64_t.h  _uint8_t.h  _uintptr_t.h
lib/ut/include/: ut_config.h  ut_tests.h  ut_utils.h
lib/ut/src/: start.c  ut_printf_impl.c
src/ctype/: ctype.c
src/pfmt/: pfmt.c
src/stdio/: sprintf.c
src/stdlib/: atoi.c  bsearch.c  errno.c
src/string/: memchr.c  memcmp.c  memcpy.c  memmove.c  mempcpy.c  memset.c  stpcpy.c  strcat.c  strchr.c  strcmp.c  strcpy.c  strcspn.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strnlen.c  strpbrk.c  strrchr.c  strspn.c  strstr.c  strtok.c
src/strings/: strcasecmp.c  strncasecmp.c
tests/: tests-ctype.c  tests-limits.c  tests-main.c  tests-stddef.c  tests-stdint.c  tests-stdio.c  tests-stdlib.c  tests-string.c  tests-strings.c  tests-x86_64.c
tests/test_helpers/: start.c  tests.h  ut_assert.h  ut_config.h  ut_printf_impl.c  ut_utils.c
